--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </div>
   </div>
   <div class="section3">
-    <video autoplay loop>
+    <video autoplay loop controls>
       <source src="./video/video_20250219_162219_edit.mp4" type="video/mp4">
     </video>
   </div>
