--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
     <img src="./images/AdobeStock_65482539_Preview.jpeg">
     <h1> Explore the world with tripadvisor</h1>
     <div class="section6__s1">
-      <p>Read Now</p>
+      <p>VIEW</p>
+      
     </div>
   </div>
   <div class="section7">
