--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
         </h1>
       </div>
       <div><img src="./images/Screenshot 2025-02-19 130434.png">
-        <h1>Aakash Malhotra</h1>
+        <h1 id="Aakash">Aakash Malhotra</h1>
       </div>
       <div><img src="./images/Screenshot 2025-02-19 130701.png">
-        <H1>Brinda Sharma
+        <H1 id="Brinda">Brinda Sharma
         </H1>
       </div>
     </div>
