--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Sigmar&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Sigmar&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -58,17 +58,17 @@
       <p>2025' Travellers' Choice Awards Best Of The Best Beaches </p>
     </div>
     <div class="section4__s2">
-      <div><img
+      <div><img class="hover"
           src="./images/stock-photo-chennai-text-on-marina-beach-marina-beach-chennai-city-tamil-nadu-india-bay-of-bengal-madras-view-1765681589.jpg">
         <h1>CHENNAI</h1>
       </div>
-      <div><img src="./images/stock-photo-baga-arrow-on-the-beach-352329497.jpg">
+      <div><img class="hover" src="./images/stock-photo-baga-arrow-on-the-beach-352329497.jpg">
         <h1>GOA</h1>
       </div>
-      <div><img src="./images/stock-photo-one-of-india-finest-beaches-varkala-beach-kerala-india-2514014233.jpg">
+      <div><img class="hover" src="./images/stock-photo-one-of-india-finest-beaches-varkala-beach-kerala-india-2514014233.jpg">
         <h1>KERALA</h1>
       </div>
-      <div><img
+      <div><img class="hover"
           src="./images/stock-photo-indian-tourists-a-large-crowd-resting-on-the-most-beautiful-beach-in-asia-called-radhanagar-beach-1071211496.jpg">
         <H1>Havelock Island</H1>
       </div>
@@ -80,28 +80,28 @@
       <p>Tried-and -true guidance to fuel your next big trip</p>
     </div>
     <div class="section5__s2">
-      <div><img src="./images/Screenshot 2025-02-19 125123.png">
+      <div><img class="hover" src="./images/Screenshot 2025-02-19 125123.png">
         <h1>SHENAZ</h1>
       </div>
-      <div><img src="./images/Screenshot 2025-02-19 130041.png">
+      <div><img class="hover" src="./images/Screenshot 2025-02-19 130041.png">
         <h1>Ankita Kumar
         </h1>
       </div>
-      <div><img src="./images/Screenshot 2025-02-19 130434.png">
+      <div><img class="hover" src="./images/Screenshot 2025-02-19 130434.png">
         <h1 id="Aakash">Aakash Malhotra</h1>
       </div>
-      <div><img src="./images/Screenshot 2025-02-19 130701.png">
+      <div><img class="hover" src="./images/Screenshot 2025-02-19 130701.png">
         <H1 id="Brinda">Brinda Sharma
         </H1>
       </div>
     </div>
   </div>
   <div class="section6">
-    <img src="./images/AdobeStock_65482539_Preview.jpeg">
+    <img class="hover" src="./images/AdobeStock_65482539_Preview.jpeg">
     <h1> Explore the world with tripadvisor</h1>
     <div class="section6__s1">
       <p>VIEW</p>
-      
+
     </div>
   </div>
   <div class="section7">
