--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
     </div>
   </div>
   </div>
-  <div class="section3">
-    <video autoplay loop controls>
-      <source src="./video/video_20250219_162219_edit.mp4" type="video/mp4">
-    </video>
-  </div>
+  <div class="sliding-container">
+    <div class="slide"><img src="./images/c2.jpg"></div>
+    <div class="slide"><img src="./images/c7.jpg"></div>
+    <div class="slide"><img src="./images/c4.jpg"></div>
+    <div class="slide"><img src="./images/c5.jpg"></div>
+</div>
   <div class="section4">
     <h1> Expolore the india's most stunning seasides</h1>
     <div class="section4__s1">
