--- a/index.html
+++ b/index.html
@@ -51,12 +51,15 @@
     </div>
   </div>
   </div>
-  <div class="sliding-container">
+  <div id="haa"> <div class="sliding-container"> 
     <div class="slide"><img src="./images/c2.jpg"></div>
     <div class="slide"><img src="./images/c7.jpg"></div>
     <div class="slide"><img src="./images/c4.jpg"></div>
     <div class="slide"><img src="./images/c5.jpg"></div>
 </div>
+</div>
+
+
   <div class="section4">
     <h1> Expolore the india's most stunning seasides</h1>
     <div class="section4__s1">
