--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <p>Explore</p>
       <p>Write a review</p>
       <p>Add a Place</p>
-      <p>Jion</p>
+      <p>JION</p>
       <p>Travellers Choice</p>
       <p>Help Centre</p>
       <p>Travel Stories</p>
