--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
       <div><img class="hover"
           src="./images/stock-photo-indian-tourists-a-large-crowd-resting-on-the-most-beautiful-beach-in-asia-called-radhanagar-beach-1071211496.jpg">
-        <H1>Havelock Island</H1>
+        <H1>Havelock</H1>
       </div>
     </div>
   </div>
@@ -92,14 +92,14 @@
         <h1>SHENAZ</h1>
       </div>
       <div><img class="hover" src="./images/Screenshot 2025-02-19 130041.png">
-        <h1>Ankita Kumar
+        <h1>Ankita
         </h1>
       </div>
       <div><img class="hover" src="./images/Screenshot 2025-02-19 130434.png">
-        <h1 id="Aakash">Aakash Malhotra</h1>
+        <h1 id="Aakash">Aakash</h1>
       </div>
       <div><img class="hover" src="./images/Screenshot 2025-02-19 130701.png">
-        <H1 id="Brinda">Brinda Sharma
+        <H1 id="Brinda">Brinda
         </H1>
       </div>
     </div>
