--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
   </div>
   <div id="haa"> <div class="sliding-container"> 
     <div class="slide"><img src="./images/c2.jpg"></div>
-    <div class="slide"><img src="./images/c7.jpg"></div>
+    <div class="slide"><img src="./images/india.jpg"></div>
     <div class="slide"><img src="./images/c4.jpg"></div>
-    <div class="slide"><img src="./images/c5.jpg"></div>
+    <div class="slide"><img src="./images/marina.jpg"></div>
 </div>
 </div>
 
