--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </div>
   </div>
   <div class="section6">
-    <img class="hover" src="./images/AdobeStock_65482539_Preview.jpeg">
+    <img class="no" src="./images/AdobeStock_65482539_Preview.jpeg">
     <h1> Explore the world with tripadvisor</h1>
     <div class="section6__s1">
       <p>VIEW</p>
